--- a/projects/collatz/.gitignore
+++ b/projects/collatz/.gitignore
@@ -10,3 +10,19 @@ RunCollatz
 RunCollatz.tmp
 TestCollatz
 TestCollatz.tmp
+latex/
+Collatz.c++.gcov
+Collatz.gcda
+Collatz.gcno
+Collatz.plist
+Doxyfile
+doxygen_sqlite3.db
+iostream.gcov
+RunCollatz
+RunCollatz.plist
+RunCollatz.tmp
+TestCollatz
+TestCollatz.gcda
+TestCollatz.gcno
+TestCollatz.plist
+TestCollatz.tmp
